[gd_scene load_steps=9 format=3 uid="uid://bv1850xotwfxt"]

[ext_resource type="PackedScene" uid="uid://ymqi1casfysa" path="res://art/visual/male_character_ps1-style.glb" id="1_ujhk0"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_kooth"]
[ext_resource type="Script" path="res://scripts/canvas_layer.gd" id="2_nfnki"]
[ext_resource type="PackedScene" uid="uid://bivh5hg55epm3" path="res://scenes/view_model.tscn" id="2_rpm7w"]
[ext_resource type="FontFile" uid="uid://c5tbkn7w5hay3" path="res://art/mingliu.TTF" id="3_tyvbu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_engiy"]
radius = 0.225678
height = 1.97294

[sub_resource type="LabelSettings" id="LabelSettings_3xtde"]
font = ExtResource("3_tyvbu")
font_size = 44
font_color = Color(0.904786, 0, 0.0445938, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lkoow"]
font = ExtResource("3_tyvbu")
font_size = 32

[node name="Player" instance=ExtResource("1_ujhk0")]
script = ExtResource("2_kooth")

[node name="Sketchfab_model" parent="." index="0"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, -1.43531e-16, -3.08149e-33, 1.38778e-17)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.982355, 0)
shape = SubResource("CapsuleShape3D_engiy")

[node name="Head" type="Node3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, -0.111936)

[node name="Camera3D" type="Camera3D" parent="Head" index="0"]
cull_mask = 1048573
near = 0.045
far = 5000.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera3D" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Head/Camera3D/SubViewportContainer" index="0"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="ViewModelCamera" parent="Head/Camera3D/SubViewportContainer/SubViewport" index="0" instance=ExtResource("2_rpm7w")]

[node name="gun_barrel" parent="Head/Camera3D/SubViewportContainer/SubViewport/ViewModelCamera/FPSRig/Revolver" index="1"]
transform = Transform3D(-10, 8.74228e-07, -3.63798e-12, 1.81899e-12, -4.37114e-07, -10, -8.74228e-07, -10, 4.37114e-07, 1.04904e-05, -3.31171, -2.31123)

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]
script = ExtResource("2_nfnki")

[node name="Control" type="Control" parent="CanvasLayer" index="0"]
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 810.0
mouse_filter = 1

[node name="Label" type="Label" parent="CanvasLayer/Control" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1212.0
offset_top = 623.0
offset_right = -52.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
text = "AMMO"
label_settings = SubResource("LabelSettings_3xtde")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FPS" type="Label" parent="CanvasLayer/Control" index="1"]
layout_mode = 0
offset_right = 127.0
offset_bottom = 95.0
label_settings = SubResource("LabelSettings_lkoow")

[editable path="Head/Camera3D/SubViewportContainer/SubViewport/ViewModelCamera"]
[editable path="Head/Camera3D/SubViewportContainer/SubViewport/ViewModelCamera/FPSRig/Revolver"]
